<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">三阶魔方</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="previousFace">上一面</string>
    <string name="nextFace">下一面</string>

    <string name="front">前</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="behind">后</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="click1">1、点击</string>
    <string name="click2">2、点击</string>
    <string name="click3">3、点击</string>
    <string name="click4">4、点击</string>
    <string name="content1">了解魔方的相关历史</string>
    <string name="content2">三阶魔方的还原教程</string>
    <string name="content3">多阶魔方的还原教程</string>
    <string name="content4">观看魔方比赛的视频</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="solver">解决</string>
    <string name="finished">结束</string>
    <string name="title_welcome">欢迎来到</string>
    <string name="title_appname">三阶魔方</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
